--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,13 +1,20 @@
+@import url('./fonts/benton-sans-font.css');
+
 :root {
   --primary: #DA3837;
+  --nav-height: 90px;
 }
 
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'benton-sans', sans-serif;
+  font-size: 18px;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'benton-sans-wide', sans-serif;
 }
 
 a {
