--- a/styles/globals.css
+++ b/styles/globals.css
@@ -24,6 +24,15 @@ a {
   box-sizing: border-box;
 }
 
+.container {
+  margin: 50px auto;
+  padding: 20px;
+}
+
+section {
+
+}
+
 .btn-primary, .btn-primary:active, .btn-primary:hover {
   background: var(--primary);
   border-color:  var(--primary);
