--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,8 +1,66 @@
 .landingImage {
 	width: 100%;
-	height: calc(100vh - var(--nav-height));
-	background: url('https://cdnb.artstation.com/p/assets/images/images/024/538/827/original/pixel-jeff-clipa-s.gif');
+	/*height: calc(100vh - var(--nav-height));*/
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-attachment: center;
+
+	display: flex;
+  	align-items: center;
+  	width: 100%;
+ 	background: #DA3837;  /* fallback for old browsers */
+	background: -webkit-linear-gradient(to right, #DA3837, #333333);  /* Chrome 10-25, Safari 5.1-6 */
+	background: linear-gradient(to right, #DA3837, #333333); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+}
+
+.landingHeaders {
+	width: 100%;
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	padding: 0rem 5rem;
+	justify-content: center;
+}
+
+.landingHeaders h1, .landingHeaders h2 {
+  	font-family: 'benton-sans', sans-serif;
+  	color: white;
+}
+.landingHeaders h1 {
+  	font-weight: bold;
+}
+
+.cardContainer {
+	padding: 0;
+	margin-bottom: 1rem;
+}
+.centeredCard {
+	text-align: center;
+}
+
+.cardImage {
+	object-fit: contain;
+	max-width: 100%;
+	margin-bottom: 0.5rem;
+}
+
+.landingIcon {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.teamItemText > h6 {
+	margin: 0;
+}
+.teamItemText > p {
+	font-size: 0.8rem;
+	line-height: 1rem;
+}
+
+@media only screen and (max-width : 768px) {
+	.landingHeaders {
+		padding: 0rem 2rem;
+	}
 }
