--- a/styles/sponsors.module.css
+++ b/styles/sponsors.module.css
@@ -11,9 +11,17 @@
 }
 .card {
 	padding: 0.5rem;
+	text-align: center;
 }
 
 .cardImage {
 	object-fit: contain;
 	max-width: 100%;
+}
+.cardText {
+	margin-top: 0.5rem;
+	margin-bottom: 0.5rem;
+	text-align: center;
+	font-size: 1rem;
+	line-height: 1rem;
 }
