--- a/styles/nav.css
+++ b/styles/nav.css
@@ -3,6 +3,12 @@
 	box-shadow: 0 0 10px gray;
 }
 
+#nav > .container {
+	margin-top: 0;
+	margin-bottom: 0;
+	padding: 0;
+}
+
 .navbar-brand:hover {
 	filter: initial;
 }
