--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,26 +1,17 @@
 .landingImage {
 	width: 100%;
-	/*height: calc(100vh - var(--nav-height));*/
-	background-repeat: no-repeat;
-	background-size: cover;
-	background-attachment: center;
 
 	display: flex;
   	align-items: center;
-  	width: 100%;
- 	background: #DA3837;  /* fallback for old browsers */
-	background: -webkit-linear-gradient(to right, #DA3837, #333333);  /* Chrome 10-25, Safari 5.1-6 */
-	background: linear-gradient(to right, #DA3837, #333333); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
 }
 
 .landingHeaders {
 	width: 100%;
 	height: 100%;
-	display: flex;
+	/*display: flex;
 	flex-direction: column;
 	padding: 0rem 5rem;
-	justify-content: center;
+	justify-content: center;*/
 }
 
 .landingHeaders h1, .landingHeaders h2 {
@@ -57,6 +48,23 @@
 .teamItemText > p {
 	font-size: 0.8rem;
 	line-height: 1rem;
+}
+
+.landingContainer {
+	/*height: calc(100vh - var(--nav-height));*/
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-attachment: center;
+  	width: 100%;
+ 	background: #DA3837;  /* fallback for old browsers */
+	background: -webkit-linear-gradient(to right, #DA3837, #333333);  /* Chrome 10-25, Safari 5.1-6 */
+	background: linear-gradient(to right, #DA3837, #333333); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+.landingContainer > div {
+	margin-top: 0;
+	margin-bottom: 0;
+	padding: 0;
 }
 
 @media only screen and (max-width : 768px) {
