--- a/styles/globals.css
+++ b/styles/globals.css
@@ -50,7 +50,7 @@ a:hover {
 }
 
 section {
-
+  margin-bottom: 2rem;
 }
 
 .btn-primary {
@@ -65,3 +65,11 @@ section {
 
 }
 
+.trailer-container {
+  width:100%;
+  margin:10px 0;
+}
+.trailer-container iframe {
+  width: 100%;
+  max-width:560px;
+}
