--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -24,10 +24,13 @@
 
 .cardContainer {
 	padding: 0;
-	margin-bottom: 1rem;
+	margin: 1rem;
 }
 .centeredCard {
 	text-align: center;
+}
+.centeredCard button {
+	margin: 0.5rem 0;
 }
 
 .cardImage {
@@ -56,15 +59,26 @@
 	background-size: cover;
 	background-attachment: center;
   	width: 100%;
- 	background: var(--primary);  /* fallback for old browsers */
-	background: -webkit-linear-gradient(to right, var(--primary), #333333);  /* Chrome 10-25, Safari 5.1-6 */
-	background: linear-gradient(to right, var(--primary), #333333); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-}
+ 	background: #000;
+ }
+ .landingContainer > img {
+ 	height: auto;
+ 	max-width: 100%;
+ 	display: block;
+ 	margin: auto;
+ }
 
 .landingContainer > div {
 	margin-top: 0;
 	margin-bottom: 0;
 	padding: 0;
+}
+
+.blankItem {
+	background: #CCC;
+	width: 100%;
+	height: 300px;
+	border: 1px solid #999;
 }
 
 @media only screen and (max-width : 768px) {
