minimum site changes

--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,7 +1,7 @@
 #footer {
 	margin: 2rem 0 0 0;
 	padding: 2rem 0 1rem 0;
-	background: var(--primary);
+	background: var(--bg-color);
 	color: white;
 }
 
