--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,8 +1,10 @@
 @import url('./fonts/benton-sans-font.css');
 
 :root {
-  --primary: #000;
+  --primary: #FFF;
   --primary-old: #DA3837;
+  --light-gray: #DDD;
+  --bg-color: #000;
   --nav-height: 85px;
   --hover-brightness: 0.9;
 }
@@ -13,6 +15,8 @@ body {
   margin: 0;
   font-family: 'benton-sans', sans-serif;
   font-size: 18px;
+  background: var(--bg-color);
+  color: white;
 }
 
 h1, h2, h3, h4 {
@@ -26,6 +30,7 @@ h5, h6 {
 
 p {
   line-height: 1.5em;
+  letter-spacing: 0.02em;
 }
 
 a {
@@ -35,6 +40,10 @@ a {
 a:hover {
   color: var(--primary);
   filter: brightness(var(--hover-brightness));
+}
+
+main a {
+  text-decoration: underline;
 }
 
 * {
@@ -66,6 +75,19 @@ section {
 
 }
 
+.btn-bg {
+  background: var(--bg-color);
+  border-color:  var(--bg-color);
+  color: white;
+}
+
+.btn-bg:active, .btn-bg:hover {
+  background: var(--bg-color);
+  border-color:  var(--bg-color);
+  filter: brightness(var(--hover-brightness));
+
+}
+
 .trailer-container {
   width:100%;
   margin:10px 0;
@@ -73,4 +95,18 @@ section {
 .trailer-container iframe {
   width: 100%;
   max-width:560px;
+}
+
+
+@media (min-width: 992px) {
+  .col-lg-5th {
+    width: 20%;
+    flex: 0 0 20%;
+    max-width: 20%;
+  }
+  .col-lg-5th-x2 {
+    width: 40%;
+    flex: 0 0 40%;
+    max-width: 40%;
+  }
 }
