--- a/styles/nav.css
+++ b/styles/nav.css
@@ -18,7 +18,7 @@
 }
 
 .topbar {
-	background: var(--gray-dark);
+	background: var(--bg-color);
 	color: white;
 	text-align: center;
 	font-weight: bold;
