--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,3 +1,4 @@
+
 .landingImage {
 	width: 100%;
 
@@ -74,11 +75,23 @@
 	padding: 0;
 }
 
-.blankItem {
+.filmTileItem {
 	background: #CCC;
 	width: 100%;
-	height: 300px;
-	border: 1px solid #999;
+	height: 0;
+	padding-bottom: 100%;
+	background-size: cover;
+	background-repeat: no-repeat;
+	transition: background 0.5s ease;
+}
+
+.filmContentTileItem {
+	background: var(--light-gray);
+	width: 100%;
+	height: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
 @media only screen and (max-width : 768px) {
