--- a/styles/team.module.css
+++ b/styles/team.module.css
@@ -19,6 +19,11 @@
 	font-size: 16px;
 }
 
+.teamNameHeader {
+	margin-bottom: 0;
+	text-transform: uppercase;
+}
+
 @media (max-width: 767px) {
 
 	.personContainer {
