--- a/styles/schedule.module.css
+++ b/styles/schedule.module.css
@@ -1,7 +1,8 @@
 .filmContainer {
 	display: flex;
 	flex-direction: row;
-	margin: 1rem 0;
+	margin-top: 1rem;
+	margin-bottom: 4rem;
 	box-shadow: 0px 0px 6px rgb(0 0 0 / 15%);
 	width: 100%;
 }
@@ -59,7 +60,6 @@
 	.filmContainer {
 		display: flex;
 		flex-direction: column;
-		margin: 1rem 0;
 	}
 	.imageContainer {
 		width: 100%;
