--- a/styles/schedule.module.css
+++ b/styles/schedule.module.css
@@ -1,8 +1,11 @@
+.filmOuterContainer {
+	margin-bottom: 2rem;
+}
 .filmContainer {
 	display: flex;
 	flex-direction: row;
 	margin-top: 1rem;
-	margin-bottom: 4rem;
+	/*margin-bottom: 4rem;*/
 	box-shadow: 0px 0px 6px rgb(0 0 0 / 15%);
 	width: 100%;
 }
@@ -11,7 +14,7 @@
 	display: flex;
 	flex-direction: row;
 	margin-top: 1rem;
-	margin-bottom: 2rem;
+	/*margin-bottom: 2rem;*/
 	box-shadow: 0px 0px 6px rgb(0 0 0 / 15%);
 	width: 100%;
 }
